--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.10",
     "echarts": "5.1.2",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -31,6 +32,7 @@
     "qs": "^6.11.2",
     "tdesign-icons-vue-next": "^0.2.2",
     "tdesign-vue-next": "^1.6.8",
+    "ts-md5": "^1.3.1",
     "tvision-color": "^1.6.0",
     "vue": "~3.3.8",
     "vue-i18n": "^9.6.5",
